syntax = "proto3";

option csharp_namespace = "GetContractDetails";

service ContractDetails {
	rpc GetContractInfo (ContractLookUpModel) returns (ContractModel);
}

message ContractLookUpModel{
	int32 Tokens = 1;
}

message ContractModel{
	int32 Tokens =1;
	string tradingSymbol = 2;
}